814 - auto display node select dialog (if no node already selected)

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -917,13 +917,13 @@ sendinvitation.ask_emailaddres.title=Email Adresse
 sendinvitation.body=Hallo {0},<br><br>{1} l\u00e4d Sie zum PowerFolder '{2}' ein.<br>Mit dieser Einladung bekommen Sie Zugriff auf die Dateien des Folders.<br><br>Anleitung\:<br>1) Laden Sie das freie Synchronisationstool <b>PowerFolder</b> von <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Nach der Installation von <b>PowerFolder</b> l\u00e4sst sich die angeh\u00e4ngte Einladungsdatei per Doppelclick \u00f6ffnen.<br><br>Mehr Information\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Gr\u00fcsse,<br>{1}
 sendinvitation.description=L\u00e4dt einen Benutzer ein, einem Folder beizutreten
 sendinvitation.email=Per Email...
-sendinvitation.example_emailaddress=email@domain.de
+send_invitation.example_email_address=email@domain.de
 sendinvitation.folder.text=Einladung senden an
 sendinvitation.folder.title=Einladung senden
 sendinvitation.key=i
-sendinvitation.multi_users=Mehrer ausgew\u00e4hlt
+send_invitation.multi_users=Mehrer ausgew\u00e4hlt
 sendinvitation.name=Einladung versenden
-sendinvitation.no_users=Keine Auswahl
+send_invitation.no_users=Keine Auswahl
 sendinvitation.placetostore=W\u00e4hlen Sie den Ort, an dem Sie die Einladung speichern m\u00f6chten\:
 sendinvitation.subject=Einladung zum PowerFolder '{0}'
 sendinvitation.toclipboard=In die Zwischenablage...
@@ -1095,18 +1095,18 @@ wizard.project_panel.select=Bitte w\u00e4hlen Sie das Verzeichnis mit den Projek
 wizard.projectname.choose=Projektname w\u00e4hlen
 wizard.projectname.entername=Bitte geben Sie einen Namen f\u00fcr Ihr Projekt an
 wizard.projectname.title=Einladung \u00f6ffnen
-wizard.sendinvitations.invitationtext=Ihre Nachricht an den Empf\u00e4nger
+wizard.send_invitations.invitation_text=Ihre Nachricht an den Empf\u00e4nger
 ##wizard.sendinvitations.invitationtextsample=
 ##wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
+wizard.send_invitations.never_untrusted=<html>Geben Sie Einladungen nur an vertrauensw\u00fcrdige<br>Personen.</html>
 wizard.sendinvitations.offline=Nicht verbunden
-wizard.sendinvitations.overpf=\u00dcber PowerFolder versenden
-wizard.sendinvitations.savetofile=Als Datei speichern
-wizard.sendinvitations.sendbymail=Per Mail versenden
-wizard.sendinvitations.sendinvitation=Einladung versenden
+wizard.send_invitations.over_powerfolder=\u00dcber PowerFolder versenden
+wizard.send_invitations.save_to_file=Als Datei speichern
+wizard.send_invitations.send_by_mail=Per Mail versenden
+wizard.send_invitations.send_invitation=Einladung versenden
 wizard.sendinvitations.sendsuccess=Einladung versendet
 wizard.sendinvitations.sendsuccessinfo=Die Einladung wurde erfolgreich versendet.
-wizard.sendinvitations.title=Einladung speichern
+wizard.send_invitations.title=Einladung speichern
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Bitte geben Sie Ihre (dynamische) Internetadresse an
 wizard.setupdns.improvesread=<html>Eine (dynamische) Internetadresse (Dynamic DNS) verbessert Ihre<br>Erreichbarkeit. Unbedingt ben\u00f6tigt wird sie aber nicht.</html>
