--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -107,7 +107,7 @@ clearrecentdownloads.key=v
 clearrecentdownloads.name=Vider
 
 connect.description=Se connecter \u00E0 un utilisateur de Powerfolder
-connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00E9seau apr\u00E8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00E0 un autre utilisateur.\n 
+connect.dialog.text=Entrer l'adresse IP de l'utilisateur auquel vous voulez vous connecter.\n\nPowerFolder se connecte automatiquement au r\u00E9seau apr\u00E8s quelques secondes,\nutilisez cette option pour une connexion manuelle \u00E0 un autre utilisateur.\n
 connect.dialog.title=Se connecter \u00E0 un utilisateur de PowerFolder
 connect.key=C
 connect.name=Connexion
@@ -257,7 +257,7 @@ filelist.filefilter.searchfieldinfo=Saisir un mot clef pour rechercher ...
 filelist.modifiedby=Modifi\u00E9 par
 filelist.name=Nom
 filelist.recursive=Vue \u00E0 plat
-filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans un dossier Powerfolder et envoyer des invitations 
+filelist.status.no_files_available_add_files_and_invite=Aucun fichier disponible... ajouter des fichiers dans un dossier Powerfolder et envoyer des invitations
 filelist.status.no_files_available_add_files_in_folder=Aucun fichier disponible... ajouter des fichiers dans votre dossier local pour les partager
 filelist.status.no_files_available_yet_fetching_filelist=Aucun fichier actuellement disponible... chercher dans la liste des fichiers
 
@@ -505,16 +505,16 @@ general.wednesday=Mercredi
 general.whatisthis=Qu'est-ce que ceci ?
 general.yesterday=Hier
 
-hideoffline.description=Les utilisateurs hors connexion seront retir\u00E9s des r\u00E9sultats 
+hideoffline.description=Les utilisateurs hors connexion seront retir\u00E9s des r\u00E9sultats
 hideoffline.key=H
 hideoffline.name=Cacher les utilisateurs hors connexion
 
-ignorefile.description=Fichier(s) \u00E0 ne pas t\u00E9l\u00E9charger/partager 
+ignorefile.description=Fichier(s) \u00E0 ne pas t\u00E9l\u00E9charger/partager
 ignorefile.key=i
 ignorefile.name=Ajouter un fichier \u00E0 ignorer
 
 imagefileinfo.resolution=R\u00E9solution
-imagefileinfo.unknown=Inconnu 
+imagefileinfo.unknown=Inconnu
 
 infoside.title=Information
 
@@ -608,7 +608,7 @@ networkstatisticspanel.known_users=Utilisateurs connus
 networkstatisticspanel.local_folder_count=Nombre de dossiers locaux (connect\u00E9s)
 networkstatisticspanel.local_folders_size=Taille totale de tous les fichiers locaux
 networkstatisticspanel.number_of_local_files=Nombre total de fichiers locaux
-networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibles 
+networkstatisticspanel.number_of_public_files=Nombre total de fichiers disponibles
 networkstatisticspanel.online_users=Utilisateurs connect\u00E9s
 networkstatisticspanel.public_folder_count=Nombre de dossiers publics (non connect\u00E9s)
 networkstatisticspanel.public_folders_size=Taille totale de tous les dossiers disponibles
@@ -639,7 +639,7 @@ open_local_folder.description=Ouvrir le dossier via l'explorateur de fichiers
 open_local_folder.key=E
 open_local_folder.name=Explorer le dossier
 
-openchat.description=Ouvrir une fen\u00EAtre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier 
+openchat.description=Ouvrir une fen\u00EAtre de discussion avec l'utilisateur ou avec tous les utilisateurs de ce dossier
 openchat.key=D
 openchat.name=Discussion
 
@@ -667,7 +667,7 @@ pluginsettings.name=Param\u00E8tres
 
 preferences.description=Editer les pr\u00E9f\u00E9rences
 preferences.dialog.advPort=Port
-preferences.dialog.advPort.tooltip=Au sein d'une m\u00EAme liste, saisir une "," pour s\u00E9parer les ports de PowerFolder en \u00E9coute 
+preferences.dialog.advPort.tooltip=Au sein d'une m\u00EAme liste, saisir une "," pour s\u00E9parer les ports de PowerFolder en \u00E9coute
 preferences.dialog.advanced.title=Avanc\u00E9
 preferences.dialog.autostartleechfiles=D\u00E9marrage externe du P2P
 preferences.dialog.basedir=Racine de vos dossiers partag\u00E9s
@@ -675,7 +675,7 @@ preferences.dialog.basedir.title=Indiquer le dosier par d\u00E9faut
 preferences.dialog.bind=Adresse de l'interface r\u00E9seau
 preferences.dialog.bind.any=Toute
 preferences.dialog.bind.tooltip=S\u00E9lectionner l'adresse utilis\u00E9e par PowerFolder
-preferences.dialog.bindDescr=Description de l'interface 
+preferences.dialog.bindDescr=Description de l'interface
 preferences.dialog.colortheme=Th\u00E8me de l'interface
 preferences.dialog.createdesktopshortcuts=Raccourcis sur le bureau Windows
 preferences.dialog.debugReports=Activer les journaux de d\u00E9bogage
@@ -699,11 +699,11 @@ preferences.dialog.dyndnsLoginPanel=Login
 preferences.dialog.dyndnsPassword=Mot de passe
 preferences.dialog.dyndnsSettingsTabbedPane=Param\u00E9trage DynDns
 preferences.dialog.dyndnsUpdateButton=Forcer la mise \u00E0 jour
-preferences.dialog.dyndnsUpdateError=Le service DynDns renvoie une erreur\: 
+preferences.dialog.dyndnsUpdateError=Le service DynDns renvoie une erreur\:
 preferences.dialog.dyndnsUpdateText=Le champ {0} est n\u00E9cessaire \!
 preferences.dialog.dyndnsUpdateTitle=Mise \u00E0 jour automatique de DynDns
 preferences.dialog.dyndnsUpdateUnknowError=Le service DynDns renvoie une erreur inconnue.
-preferences.dialog.dyndnsUpdateWarning=Le service DynDns renvoie un message d'erreur\: 
+preferences.dialog.dyndnsUpdateWarning=Le service DynDns renvoie un message d'erreur\:
 preferences.dialog.dyndnsUpdatedIP=Adresse IP DynDns mise \u00E0 jour
 preferences.dialog.dyndnsUserName=Utilisateur
 preferences.dialog.dyndnsmanager.nomatch.text=L'entr\u00E9e DynDns ne correspond pas \u00E0 celle de l'h\u00F4te.
@@ -735,14 +735,14 @@ preferences.dialog.plugin.status_disabled=D\u00E9sactiv\u00E9e
 preferences.dialog.plugin.status_enabled=Activ\u00E9e
 preferences.dialog.plugin.title=Plug-in
 preferences.dialog.randomPort=Trouver un port automatiquement
-preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible 
+preferences.dialog.randomPort.tooltip=PowerFolder identifiera un port disponible
 preferences.dialog.restart.restart=Red\u00E9marrer maintenant
 preferences.dialog.restart.text=des changements n\u00E9cessitent un red\u00E9marrage.
 preferences.dialog.restart.title=Red\u00E9marrage n\u00E9cessaire
 preferences.dialog.showadvanced=Pr\u00E9f\u00E9rences avanc\u00E9es
 preferences.dialog.showpreviewpanel=Active la pr\u00E9visualisation de l'image
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>vous pouvez trouver la pr\u00E9isualisation dans Mon PowerFolder->Dossier->Fichier->D\u00E9tails<BR>(Consomme \u00E9norm\u00E9ment de m\u00E9oire pour les images >500Ko, \u00E0 utiliser avec pr\u00E9caution.)</BODY></HTML>
-preferences.dialog.silentthrottle=Contr\u00F4le de la bande passante 
+preferences.dialog.silentthrottle=Contr\u00F4le de la bande passante
 preferences.dialog.silentthrottle.tooltip=Passe le suivi de la bande passante en mode silencieux (fonctionne uniquement en cas de limite de bande passante diff\u00E9rente de 0)
 preferences.dialog.smalltoolbar=Utiliser la petite barre d'ic\u00C3\u00B4nes
 preferences.dialog.startPanel=Panneau de d\u00E9marrage
@@ -761,7 +761,7 @@ preferences.dialog.use_pf_icon=Utiliser l'ic\u00F4ne PowerFolder dans Windows
 preferences.dialog.usedeltaonlan=Utiliser la synchronisation diff\u00E9rentielle sur le r\u00E9seau LAN
 preferences.dialog.usedeltaonlan.tooltip=Activer sur des r\u00E9seaux \u00E0 faible bande passante (augmente la charge du Processeur)
 preferences.dialog.userecyclebin=Utiliser la corbeille (par d\u00E9faut)
-preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00E9seau local (LAN) 
+preferences.dialog.useziponlan=Utilise la compression ZIP sur le r\u00E9seau local (LAN)
 preferences.dialog.useziponlan.tooltip=Fonctionne si les fichiers \u00E0 transf\u00E9rer sont simples \u00E0 compresser (ceci peut affecter la charge processeur)
 preferences.dialog.verbose=Activer l'enregistrement complet des \u00E9v\u00E9nements
 preferences.dialog.warnningMessage=Attention
@@ -775,7 +775,7 @@ previewfiles.description=Pr\u00E9visualiser les fichiers de ce dossier
 previewfiles.key=V
 previewfiles.name=Pr\u00E9-visualisation
 
-previewjoin.description=Rejoindre le dossier pr\u00E9visualis\u00E9 apr\u00E8s conversion 
+previewjoin.description=Rejoindre le dossier pr\u00E9visualis\u00E9 apr\u00E8s conversion
 previewjoin.key=J
 previewjoin.name=Rejoindre le dossier
 
@@ -920,13 +920,13 @@ sendinvitation.ask_emailaddres.title=Adresse de messagerie
 sendinvitation.body=Bonjour {0},<br><br>{1} vous invite \u00E0 utiliser PowerFolder '{2}'<br>Cette invitation est requise pour vous connecter au dossier priv\u00E9 h\u00E9berg\u00E9 par {1}.<br><br>1) Pour acc\u00E9der aux fichiers vous avez besoin de t\u00E9l\u00E9charger et d'installer <br>le logiciel libre PowerFolder depuis<br>http\://www.powerfolder.com.<br><br>2) Apr\u00E8s l'avoir install\u00E9, double-cliquez sur l'invitation <br> fournie en pi\u00E8ce jointe de ce message.<br><br>Pour plus d'information pour installer ou utiliser PowerFolder contactez <br>le centre de documentation via l'adresse internet http\://docs.powerfolder.com<br><br>Merci bien,<br>L'\u00E9quipe de d\u00E9veloppement de PowerFolder<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Autoriser un utilisateur \u00E0 acc\u00E9der \u00E0 ce dossier
 sendinvitation.email=A l'adresse de messagerie
-sendinvitation.example_emailaddress=indiqueradressedemessagerie@domaine.fr
+send_invitation.example_email_address=indiqueradressedemessagerie@domaine.fr
 sendinvitation.folder.text=Envoyer une invitation \u00E0
 sendinvitation.folder.title=G\u00E9n\u00E9rer un fichier d'Invitation
 sendinvitation.key=I
-sendinvitation.multi_users=S\u00E9lection de plusieurs utilisateurs
+send_invitation.multi_users=S\u00E9lection de plusieurs utilisateurs
 sendinvitation.name=Envoyer une invitation
-sendinvitation.no_users=Aucun utilisateur s\u00E9lectionn\u00E9
+send_invitation.no_users=Aucun utilisateur s\u00E9lectionn\u00E9
 sendinvitation.placetostore=Indiquer un endroit pour enregistrer l'invitation
 sendinvitation.subject=Invitation pour PowerFolder '{0}'
 sendinvitation.toclipboard=Dans le presse-papier...
@@ -1098,24 +1098,24 @@ wizard.project_panel.select=Merci d'indiquer le dossier de projet
 wizard.projectname.choose=Choisir le nom du projet
 wizard.projectname.entername=Saisir le nom de votre projet
 wizard.projectname.title=Charger une invitation
-wizard.sendinvitations.invitationtext=Saisir un message pour le destinataire
-wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=Une invitation est n\u00E9cessaire pour rejoindre un dossier.
-wizard.sendinvitations.neveruntrusted=\nNe le diffusez jamais aupr\u00E8s d'inconnu(e)s
+wizard.send_invitations.invitation_text=Saisir un message pour le destinataire
+wizard.send_invitations.invitation_text_sample=
+wizard.send_invitations.join=Une invitation est n\u00E9cessaire pour rejoindre un dossier.
+wizard.send_invitations.never_untrusted=\nNe le diffusez jamais aupr\u00E8s d'inconnu(e)s
 wizard.sendinvitations.offline=D\u00E9connect\u00E9e
-wizard.sendinvitations.overpf=Instantan\u00E9ment via PowerFolder
-wizard.sendinvitations.savetofile=Enregistrer comme fichier
-wizard.sendinvitations.sendbymail=Envoyer par e-mail
-wizard.sendinvitations.sendinvitation=envoyer l'invitation
+wizard.send_invitations.over_powerfolder=Instantan\u00E9ment via PowerFolder
+wizard.send_invitations.save_to_file=Enregistrer comme fichier
+wizard.send_invitations.send_by_mail=Envoyer par e-mail
+wizard.send_invitations.send_invitation=envoyer l'invitation
 wizard.sendinvitations.sendsuccess=Invitation envoy\u00E9e
 wizard.sendinvitations.sendsuccessinfo=Exp\u00E9dition de l'invitation r\u00E9ussie.
-wizard.sendinvitations.title=Enregistrer une invitation
+wizard.send_invitations.title=Enregistrer une invitation
 wizard.setupdns.dyndnshomepage=Page d'accueil Dyndns
 wizard.setupdns.enterdns=Indiquer votre adresse (dynamique) DNS ou cliquer sur 'Terminer'
-wizard.setupdns.improvesread=Ceci am\u00E9liore la qualit\u00E9 de votre connectivit\u00E9 aupr\u00E8s des autres. 
+wizard.setupdns.improvesread=Ceci am\u00E9liore la qualit\u00E9 de votre connectivit\u00E9 aupr\u00E8s des autres.
 wizard.setupdns.nodnssetup=Vous n'avez pas encore configur\u00E9 d'adresse (dynamique) DNS\!
 wizard.setupdns.title=Configuration facultative du (dynamic) DNS
-wizard.setupdns.validate=Validation 
+wizard.setupdns.validate=Validation
 wizard.setupsuccess=Configuration termin\u00E9e avec succ\u00E8s
 wizard.successjoin=Dossier rejoint avec succ\u00E8s\!
 wizard.syncpcspanel.foldersyncsuccess=Vous venez de configurer un dossier dupliqu\u00E9 \!\n
