--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -918,13 +918,13 @@ sendinvitation.ask_emailaddres.title=Indirizzo Email
 sendinvitation.body=Ciao {0},<br><br>{1} ti invita inPowerFolder '{2}'<br>Questo invito viene usato per accedere ad una cartella privata ospitata da{1}.<br><br>1) Per accedere ai file devi prima scaricare e installare il software gratuito<br>PowerFolder da<br>http\://www.powerfolder.com.<br><br>2) Dopo aver installato PowerFolder clicca l' invito<br>allegato a questa email.<br><br>Per ulteriori informazioni o aiuto nell' installazione ed uso di PowerFolder si prega di<br>visitare il nostro Documentation Resources at http\://docs.powerfolder.com<br><br>Grazie,<br>The PowerFolder Development Team<br>PowerFolder, Professional Folder Sharing<br>
 sendinvitation.description=Invita un utente ad utilizzare una cartella
 sendinvitation.email=All' email...
-sendinvitation.example_emailaddress=email@domain.com
+send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=Invia un invito a
 sendinvitation.folder.title=Invia invito
 sendinvitation.key=I
-sendinvitation.multi_users=Utenti multipli selezionati
+send_invitation.multi_users=Utenti multipli selezionati
 sendinvitation.name=Invia un invito
-sendinvitation.no_users=Nessun utente selezionato
+send_invitation.no_users=Nessun utente selezionato
 sendinvitation.placetostore=Scegli un posto dove memorizzare l'invito
 sendinvitation.subject=Invito a PowerFolder '{0}'
 sendinvitation.toclipboard=Sugli appunti...
@@ -1096,18 +1096,18 @@ wizard.project_panel.select=Si prega di selezionare la directory per il progetto
 wizard.projectname.choose=Scegli il nome del progetto
 wizard.projectname.entername=Inserisci il nome del tuo progetto
 wizard.projectname.title=Carica un invito
-wizard.sendinvitations.invitationtext=Inserisci un messaggio per il destinatario
+wizard.send_invitations.invitation_text=Inserisci un messaggio per il destinatario
 ##wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=Per aggiungersi ad una cartella sono necessari i file di invito.
-wizard.sendinvitations.neveruntrusted=Non dare mai i tuoi file di invito a persone non fidate
+wizard.send_invitations.join=Per aggiungersi ad una cartella sono necessari i file di invito.
+wizard.send_invitations.never_untrusted=Non dare mai i tuoi file di invito a persone non fidate
 wizard.sendinvitations.offline=Non connesso
-wizard.sendinvitations.overpf=Via PowerFolder ora
-wizard.sendinvitations.savetofile=Salva come file
-wizard.sendinvitations.sendbymail=Invia per email
-wizard.sendinvitations.sendinvitation=Invia invito
+wizard.send_invitations.over_powerfolder=Via PowerFolder ora
+wizard.send_invitations.save_to_file=Salva come file
+wizard.send_invitations.send_by_mail=Invia per email
+wizard.send_invitations.send_invitation=Invia invito
 wizard.sendinvitations.sendsuccess=Invito spedito
 wizard.sendinvitations.sendsuccessinfo=L'invito \u00E8 stato mandato con successo.
-wizard.sendinvitations.title=Salva un invito
+wizard.send_invitations.title=Salva un invito
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Inserisci il tuo dns (dinamico)
 wizard.setupdns.improvesread=Aumenta la tua raggiungibilit\u00E0. In ogni caso non \u00E8 necessario.
