--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -917,7 +917,7 @@ sendinvitation.ask_emailaddres.title=E-mail adres
 sendinvitation.body=Hallo {0},<br><br>{1} nodigt u uit om lid te worden van de PowerFolder '{2}'<br>Met deze invitatie krijgt u toegang tot de bestanden in die folder.<br><br>Gebruiksaanwijzing\:<br>1) Om de toegang tot de bestanden te krijgen moet u het gratis programma <b>PowerFolder</b> downloaden en installeren van <b><a href\="http\://www.powerfolder.com">http\://www.powerfolder.com</a></b>.<br><br>2) Na installatie van <b>PowerFolder</b> dubbel klik op het bijgevoegde Invitatie bestand.<br><br>Meer Documentatie\:<br><a href\="http\://docs.powerfolder.com">http\://docs.powerfolder.com</a><br><br>Met vriendelijk groet,<br>{1}
 sendinvitation.description=Nodig een gebruiker uit om lid te worden van een folder
 sendinvitation.email=Naar e-mail...
-sendinvitation.example_emailaddress=e-mail@domein.nl
+send_invitation.example_email_address=e-mail@domein.nl
 sendinvitation.folder.text=Verzend invitatie aan
 sendinvitation.folder.title=Verzend invitatie
 sendinvitation.key=i
@@ -1098,15 +1098,15 @@ wizard.projectname.title=Open invitatie
 ##wizard.sendinvitations.invitationtext=Enter a message for the receiver
 ##wizard.sendinvitations.invitationtextsample=
 ##wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
+wizard.send_invitations.never_untrusted=Geef invitatie bestanden nooit aan personen die u niet vertrouwd
 wizard.sendinvitations.offline=Niet verbonden
-wizard.sendinvitations.overpf=Via PowerFolder Nu
-wizard.sendinvitations.savetofile=Opslaan als bestand
-wizard.sendinvitations.sendbymail=Verzend per e-mail
-wizard.sendinvitations.sendinvitation=Verzend invitatie
+wizard.send_invitations.over_powerfolder=Via PowerFolder Nu
+wizard.send_invitations.save_to_file=Opslaan als bestand
+wizard.send_invitations.send_by_mail=Verzend per e-mail
+wizard.send_invitations.send_invitation=Verzend invitatie
 wizard.sendinvitations.sendsuccess=Invitatie verzonden
 wizard.sendinvitations.sendsuccessinfo=U heeft de invitatie succesvol verzonden.
-wizard.sendinvitations.title=Sla een invitatie op 
+wizard.send_invitations.title=Sla een invitatie op
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Vult uw (dynamic) dns in
 wizard.setupdns.improvesread=Dit bevorderd uw bereikbaarheid als een een dynamisch IP adres heeft (echter niet vereist), dit is niet nodig als u een vast IP adres heeft
