--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -918,13 +918,13 @@ sendinvitation.ask_emailaddres.title=Adres email
 sendinvitation.body=Witaj {0},<br><br>{1} zaprasza Ci\u0119 do PowerFolder '{2}'<br>To zaproszenie jest potrzebne, aby uzyska\u0107 dost\u0119p do prywatnego folderu {1}.<br><br>1) Aby uzyska\u0107 dost\u0119p do plik\u00f3w musisz najpierw pobra\u0107 i zainstalowa\u0107 darmowe<br>oprogramowanie PowerFolder ze strony<br>http\://www.powerfolder.com.<br><br>2) Po zainstalowaniu PowerFolder kliknij dwa razy na plik<br>z zaproszeniem za\u0142\u0105czony do tego emaila.<br><br>Aby uzyska\u0107 wi\u0119cej informacji lub pomoc w instalacji lub u\u017cywaniu PowerFolder zapraszamy<br>do odwiedzenia naszych Zasob\u00f3w Dokumentacji na http\://docs.powerfolder.com<br><br>Dzi\u0119kujemy,<br>The PowerFolder Development Team<br>PowerFolder, Profesjonalne Udost\u0119pnianie Folder\u00f3w<br>
 sendinvitation.description=Zapro\u015b u\u017cytkownika do folderu
 sendinvitation.email=Na email...
-sendinvitation.example_emailaddress=email@domena.com
+send_invitation.example_email_address=email@domena.com
 sendinvitation.folder.text=Wy\u015blij zaproszenie do
 sendinvitation.folder.title=Wy\u015blij Zaproszenie
 sendinvitation.key=i
-sendinvitation.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
+send_invitation.multi_users=Zaznaczono kilku u\u017cytkownik\u00f3w
 sendinvitation.name=Wy\u015blij Zaproszenie
-sendinvitation.no_users=Nie zaznaczono u\u017cytkownika
+send_invitation.no_users=Nie zaznaczono u\u017cytkownika
 sendinvitation.placetostore=Wybierz miejsce, w kt\u00f3rym chcesz zachowa\u0107 zaproszenie
 sendinvitation.subject=Zaproszenie do PowerFolder '{0}'
 sendinvitation.toclipboard=Do schowka...
@@ -1096,18 +1096,18 @@ wizard.pfwizard.title=Kreator
 wizard.projectname.choose=Wybierz nazw\u0119 projektu
 wizard.projectname.entername=Wpisz nazw\u0119 Twojego projektu
 wizard.projectname.title=Wczytaj zaproszenie
-wizard.sendinvitations.invitationtext=Wiadomo\u015b\u0107 dla odbiorcy
-wizard.sendinvitations.invitationtextsample=Wiadomo\u015b\u0107 dla odbiorcy zaproszenia...
+wizard.send_invitations.invitation_text=Wiadomo\u015b\u0107 dla odbiorcy
+wizard.send_invitations.invitation_text_sample=Wiadomo\u015b\u0107 dla odbiorcy zaproszenia...
 ##wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=Nigdy nie dawaj swoich plik\u00f3w zaprosze\u0144 niezaufanym osobom.
+wizard.send_invitations.never_untrusted=Nigdy nie dawaj swoich plik\u00f3w zaprosze\u0144 niezaufanym osobom.
 wizard.sendinvitations.offline=Nie po\u0142\u0105czony
-wizard.sendinvitations.overpf=Przez PowerFolder
-wizard.sendinvitations.savetofile=Zapisz jako plik
-wizard.sendinvitations.sendbymail=Wy\u015blij poczt\u0105
-wizard.sendinvitations.sendinvitation=Wy\u015blij zaproszenie
+wizard.send_invitations.over_powerfolder=Przez PowerFolder
+wizard.send_invitations.save_to_file=Zapisz jako plik
+wizard.send_invitations.send_by_mail=Wy\u015blij poczt\u0105
+wizard.send_invitations.send_invitation=Wy\u015blij zaproszenie
 wizard.sendinvitations.sendsuccess=Zaproszenie wys\u0142ane
 wizard.sendinvitations.sendsuccessinfo=Pomy\u015blnie wys\u0142ano zaproszenie
-wizard.sendinvitations.title=Zapisz zaproszenie
+wizard.send_invitations.title=Zapisz zaproszenie
 wizard.setupdns.dyndnshomepage=Strona domowa DynDns
 wizard.setupdns.enterdns=Wprowad\u017a sw\u00f3j (dynamiczny) dns
 wizard.setupdns.improvesread=Zwi\u0119ksza Twoj\u0105 osi\u0105galno\u015b\u0107. Nie jest jednak konieczne.
