--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -917,7 +917,7 @@ sendinvitation.ask_emailaddres.title=E-post adress
 sendinvitation.body=Hej {0},<br><br>{1} inbjuder dig till PowerFolder '{2}'<br>Denna inbjudan anv\u00e4nds f\u00f6r att komma \u00e5t en privat folder hos {1}.<br><br>1) f\u00f6r att komma \u00e5t filerna beh\u00f6ver du f\u00f6rst ladda ner och installera det fria<br>programmet PowerFolder fr\u00e5n<br>http\://www.powerfolder.com.<br><br>2) Sedan du har installerat PowerFolder dubbel-klicka p\u00e5 inbjudningsfilen<br>som \u00e4r bifogad denna e-post.<br><br>F\u00f6r mer information eller hj\u00e4lp med att installera eller att anv\u00e4nda PowerFolder<br>var v\u00e4nlig g\u00e5 till v\u00e5r dokumentation p\u00e5 http\://docs.powerfolder.com<br><br>H\u00e4lsningar,<br>PowerFolder utvecklingsteam<br>PowerFolder, professionell fildelning<br>
 sendinvitation.description=Inbjuder en anv\u00e4ndare till en folder
 sendinvitation.email=Till e-post...
-sendinvitation.example_emailaddress=e-post@dom\u00e4n.se
+send_invitation.example_email_address=e-post@dom\u00e4n.se
 sendinvitation.folder.text=Skicka inbjudan till
 sendinvitation.folder.title=Skicka inbjudan
 sendinvitation.key=i
@@ -1098,15 +1098,15 @@ wizard.projectname.title=Ladda inbjudan
 ##wizard.sendinvitations.invitationtext=Enter a message for the receiver
 ##wizard.sendinvitations.invitationtextsample=
 ##wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
+wizard.send_invitations.never_untrusted=Ge aldrig ut inbjudningsfiler till n\u00e5gon du inte litar p\u00e5.
 wizard.sendinvitations.offline=Ej ansluten
-wizard.sendinvitations.overpf=Via PowerFolder nu
-wizard.sendinvitations.savetofile=Spara som en fil
-wizard.sendinvitations.sendbymail=Skicka med e-post
-wizard.sendinvitations.sendinvitation=Skicka inbjudan
+wizard.send_invitations.over_powerfolder=Via PowerFolder nu
+wizard.send_invitations.save_to_file=Spara som en fil
+wizard.send_invitations.send_by_mail=Skicka med e-post
+wizard.send_invitations.send_invitation=Skicka inbjudan
 wizard.sendinvitations.sendsuccess=Inbjudan skickad
 wizard.sendinvitations.sendsuccessinfo=Du lyckades s\u00e4nda iv\u00e4g inbjudan.
-wizard.sendinvitations.title=Spara inbjudan
+wizard.send_invitations.title=Spara inbjudan
 wizard.setupdns.dyndnshomepage=DynDNS hemsida
 wizard.setupdns.enterdns=Ange din (dynamiska) DNS
 wizard.setupdns.improvesread=Det g\u00f6r det l\u00e4ttare att n\u00e5 dig. Men det \u00e4r inget som kr\u00e4vs
