--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -917,13 +917,13 @@ sendinvitation.ask_emailaddres.title=Direcci\u00f3n de Email
 sendinvitation.body=Saludos {0},<br><br>{1} te invita a PowerFolder '{2}'<br>Esta invitaci\u00f3n te permitir\u00e1 accessar una carpeta privada servida por  {1}.<br><br>1) Para ser accessada necesitas primero descarga e instalar el <br>software gratuito, PowerFolder. Lo encontraras en\:<br>http\://www.powerfolder.com.<br><br>2) Despues de haberlo instalado hazle un click-doble a la invitaci\u00f3n<br>El archivo atado a este correo<br><br>Para mas informaci\u00f3n o asistancia en la instalaci\u00f3n o uso de  PowerFolder favor de<br>visitar nuestra documentaci\u00f3n en  http\://docs.powerfolder.com<br><br>Thank You,<br>El Equipo de desarrollo de PowerFolder<br>PowerFolder, Programa para Compartir Carpetas Profesional<br>.m
 sendinvitation.description=Invita un usuario a una carpeta
 sendinvitation.email=Por email...
-sendinvitation.example_emailaddress=email@dominio.com
+send_invitation.example_email_address=email@dominio.com
 sendinvitation.folder.text=Enviar invitaci\u00f3n a
 sendinvitation.folder.title=Enviar invitaci\u00f3n
 sendinvitation.key=i
-sendinvitation.multi_users=Multiple selecci\u00f3n de usuarios
+send_invitation.multi_users=Multiple selecci\u00f3n de usuarios
 sendinvitation.name=Enviar invitaci\u00f3n
-sendinvitation.no_users=Ningu'n usuario ha sido seleccionado
+send_invitation.no_users=Ningu'n usuario ha sido seleccionado
 sendinvitation.placetostore=Elija un lugar donde guardar la invitaci\u00f3n
 sendinvitation.subject=Invitaci\u00f3n al PowerFolder '{0}'
 sendinvitation.toclipboard=Al portapapeles...
@@ -1095,18 +1095,18 @@ wizard.pfwizard.title=Asistente
 wizard.projectname.choose=Elija el nombre del proyecto
 wizard.projectname.entername=Teclee el nombre de su proyecto
 wizard.projectname.title=Abrir invitaci\u00f3n
-wizard.sendinvitations.invitationtext=Enter a message for the receiver
-wizard.sendinvitations.invitationtextsample=Texto ejemplo de invitaci\u00f3n
+wizard.send_invitations.invitation_text=Enter a message for the receiver
+wizard.send_invitations.invitation_text_sample=Texto ejemplo de invitaci\u00f3n
 ##wizard.sendinvitations.join=Invitation files are required to join a folder.
-wizard.sendinvitations.neveruntrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
+wizard.send_invitations.never_untrusted=Nunca entrege archivos invitaci\u00f3n a personas en los que no conf\u00eda
 wizard.sendinvitations.offline=No conectado
-wizard.sendinvitations.overpf=Via PowerFolder ahora
-wizard.sendinvitations.savetofile=Guardar como archivo
-wizard.sendinvitations.sendbymail=Enviar por mail
-wizard.sendinvitations.sendinvitation=Enviar invitaci\u00f3n
+wizard.send_invitations.over_powerfolder=Via PowerFolder ahora
+wizard.send_invitations.save_to_file=Guardar como archivo
+wizard.send_invitations.send_by_mail=Enviar por mail
+wizard.send_invitations.send_invitation=Enviar invitaci\u00f3n
 wizard.sendinvitations.sendsuccess=Invitaci\u00f3n enviada
 wizard.sendinvitations.sendsuccessinfo=La invitaci\u00f3n se envi\u00f3 con exito.
-wizard.sendinvitations.title=Guardar invitaci\u00f3n
+wizard.send_invitations.title=Guardar invitaci\u00f3n
 wizard.setupdns.dyndnshomepage=P\u00e1gina web Dyndns
 wizard.setupdns.enterdns=Teclee su dns (din\u00e1mica)
 wizard.setupdns.improvesread=Esto mejora su localizaci\u00f3n en la red. Aunque no es necesario
