--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -920,13 +920,13 @@ sendinvitation.ask_emailaddres.title=\u7535\u90ae\u5730\u5740
 sendinvitation.body={0} \uff0c\u4f60\u597d<br><br>{1} \u9080\u8bf7\u4f60\u4f7f\u7528PowerFolder\u7684\u6587\u4ef6\u5939 '{2}'<br>\u8fd9\u4e2a\u9080\u8bf7\u7528\u6765\u8fdb\u5165 {1} \u7684\u79c1\u6709\u6587\u4ef6\u5939\u3002<br><br>1) \u8981\u8fdb\u5165\u8be5\u6587\u4ef6\uff0c\u4f60\u9996\u5148\u8981\u4e0b\u8f7d\u5e76\u5b89\u88c5\u514d\u8d39\u8f6f\u4ef6PowerFolder\u3002<br>\u4e0b\u8f7d\u5730\u5740\u4e3a\uff1ahttp\://www.powerfolder.com\u3002<br><br>2) \u5b89\u88c5\u5b8cPowerFolder\u540e\uff0c\u53f3\u952e\u9009\u62e9\u90ae\u4ef6\u9644\u4ef6\u7684\u9080\u8bf7\u3002<br><br>\u5b89\u88c5\u6216\u4f7f\u7528\u5e2e\u52a9\u53ca\u66f4\u591a\u4fe1\u606f\uff0c\u8bf7\u8bbf\u95ee\u5728\u7ebf\u6587\u6863\uff1a http\://docs.powerfolder.com<br><br>\u8c22\u8c22\uff01<br>PowerFolder\u5f00\u53d1\u56e2\u961f<br>PowerFolder\uff0c\u4e13\u4e1a\u6587\u4ef6\u5939\u5171\u4eab\u5de5\u5177<br>
 sendinvitation.description=\u9080\u8bf7\u7528\u6237\u5230\u6587\u4ef6\u5939
 sendinvitation.email=To email...
-sendinvitation.example_emailaddress=email@domain.com
+send_invitation.example_email_address=email@domain.com
 sendinvitation.folder.text=\u53d1\u9001\u9080\u8bf7\u7ed9
 sendinvitation.folder.title=\u53d1\u9001\u9080\u8bf7
 sendinvitation.key=i
-sendinvitation.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
+send_invitation.multi_users=\u9009\u62e9\u591a\u4e2a\u7528\u6237
 sendinvitation.name=\u53d1\u9001\u9080\u8bf7
-sendinvitation.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
+send_invitation.no_users=\u6ca1\u6709\u9009\u62e9\u7528\u6237
 sendinvitation.placetostore=\u9009\u62e9\u5b58\u653e\u9080\u8bf7\u7684\u4f4d\u7f6e
 sendinvitation.subject=PowerFolder '{0}' \u7684\u9080\u8bf7
 sendinvitation.toclipboard=\u5230\u526a\u8d34\u677f\u2026\u2026
@@ -1098,18 +1098,18 @@ wizard.project_panel.select=\u8bf7\u9009\u62e9\u9879\u76ee\u6587\u4ef6\u5939
 wizard.projectname.choose=\u9009\u62e9\u9879\u76ee\u540d\u79f0
 wizard.projectname.entername=\u8f93\u5165\u4f60\u7684\u9879\u76ee\u540d\u79f0
 wizard.projectname.title=\u8f7d\u5165\u9080\u8bf7
-wizard.sendinvitations.invitationtext=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7ed9\u63a5\u53d7\u8005
-wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.join=\u52a0\u5165\u6587\u4ef6\u5939\u9700\u8981\u9080\u8bf7\u6587\u4ef6
-wizard.sendinvitations.neveruntrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
+wizard.send_invitations.invitation_text=\u8f93\u5165\u4e00\u6761\u6d88\u606f\u7ed9\u63a5\u53d7\u8005
+wizard.send_invitations.invitation_text_sample=
+wizard.send_invitations.join=\u52a0\u5165\u6587\u4ef6\u5939\u9700\u8981\u9080\u8bf7\u6587\u4ef6
+wizard.send_invitations.never_untrusted=\u4ece\u4e0d\u7ed9\u4e0d\u4fe1\u4efb\u7684\u4eba\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.offline=\u672a\u8fde\u63a5
-wizard.sendinvitations.overpf=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
-wizard.sendinvitations.savetofile=\u53e6\u5b58\u4e3a\u6587\u4ef6
-wizard.sendinvitations.sendbymail=\u901a\u8fc7\u90ae\u4ef6\u53d1\u9001
-wizard.sendinvitations.sendinvitation=\u53d1\u9001\u9080\u8bf7
+wizard.send_invitations.over_powerfolder=\u9a6c\u4e0a\u4f7f\u7528PowerFolder
+wizard.send_invitations.save_to_file=\u53e6\u5b58\u4e3a\u6587\u4ef6
+wizard.send_invitations.send_by_mail=\u901a\u8fc7\u90ae\u4ef6\u53d1\u9001
+wizard.send_invitations.send_invitation=\u53d1\u9001\u9080\u8bf7
 wizard.sendinvitations.sendsuccess=\u9080\u8bf7\u53d1\u9001\u6210\u529f
 wizard.sendinvitations.sendsuccessinfo=\u60a8\u5df2\u7ecf\u6210\u529f\u53d1\u9001\u9080\u8bf7\u3002
-wizard.sendinvitations.title=\u4fdd\u5b58\u9080\u8bf7
+wizard.send_invitations.title=\u4fdd\u5b58\u9080\u8bf7
 wizard.setupdns.dyndnshomepage=\u52a8\u6001DNS\u4e3b\u9875
 wizard.setupdns.enterdns=\u8f93\u5165\u4f60\u7684\u52a8\u6001DNS
 wizard.setupdns.improvesread=\u8fd9\u4f1a\u6539\u5584\u4f60\u7684\u8fde\u63a5\u6027\u80fd\u3002\u4f46\u5e76\u4e0d\u662f\u5fc5\u9700\u7684\u3002
