796 - Use FolderSettings instead of parameters.

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -468,7 +468,7 @@ general.help=Hilfe
 general.hide=Verstecken
 general.hours=Stunden
 general.inet=Internet
-general.localcopyat=Lokaler Speicherort
+general.local_copy_at=Lokaler Speicherort
 general.localcopyplace=W\u00e4hlen den lokalen Speicherort 
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
