--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -312,7 +312,7 @@ foldercreate.key=N
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of folder should not be empty
 foldercreate.nameempty.title=Folder name required
-foldercreate.progress.text=Creating folder '{0}'
+folder_create.progress.text=Creating folder '{0}'
 foldercreate.success=Folder {0} shared, local copy at '{1}'
 
 folderexception.dialog.text=Unable to join folder '{0}'.\nReason\: {1}
@@ -463,7 +463,7 @@ general.help=help
 general.hide=hide
 general.hours=Hour(s)
 general.inet=Internet
-general.localcopyat=Local copy at
+general.local_copy_at=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
