--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -468,7 +468,7 @@ general.help=ayuda
 general.hide=ocultar
 general.hours=Hora(s)
 general.inet=i-net
-general.localcopyat=Copia local en
+general.local_copy_at=Copia local en
 general.localcopyplace=Elija un lugar para la copia local
 general.localized_date_format=MMMM dd. yyyy (M\:M\u00e9s d\:d\u00eda y\:a\u00f1o)
 general.localnet=red local
