--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -314,7 +314,7 @@ foldercreate.key=P
 foldercreate.name=Partager
 foldercreate.nameempty.text=Le nom du dossier PowerFolder est n\u00E9cessaire
 foldercreate.nameempty.title=Nom n\u00E9cessaire
-foldercreate.progress.text=Cr\u00E9ation du dossier PowerFolder '{0}'
+folder_create.progress.text=Cr\u00E9ation du dossier PowerFolder '{0}'
 foldercreate.success=Le dossier PowerFolder {0} est cr\u00E9\u00E9, localis\u00E9 dans '{1}'
 
 folderexception.dialog.text=Impossible de joindre le dossier PowerFolder '{0}'.\nRaison\: {1}
@@ -469,7 +469,7 @@ general.help=Aide
 general.hide=cach\u00E9
 general.hours=Heure(s)
 general.inet=i-net
-general.localcopyat=Emplacement du dossier \u00E0 partager
+general.local_copy_at=Emplacement du dossier \u00E0 partager
 general.localcopyplace=Choisir un emplacement pour une copie locale
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=local
