--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -314,7 +314,7 @@ foldercreate.key=C
 foldercreate.name=Condividi cartella
 foldercreate.nameempty.text=Il nome di PowerFolder non dovrebbe essere vuoto
 foldercreate.nameempty.title=Nome richiesto
-foldercreate.progress.text=Creazione di PowerFolder in corso '{0}'
+folder_create.progress.text=Creazione di PowerFolder in corso '{0}'
 foldercreate.success=PowerFolder {0} impostato correttamente, copia locale in '{1}'
 
 folderexception.dialog.text=Impossibile raggiungere PowerFolder '{0}'.\nMotivo\: {1}
@@ -469,7 +469,7 @@ general.help=aiuto
 general.hide=nascondi
 general.hours=Ora(e)
 general.inet=i-rete
-general.localcopyat=Copia locale a
+general.local_copy_at=Copia locale a
 general.localcopyplace=Scegli un posto per la copia locale
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=locale
