--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -468,7 +468,7 @@ general.help=\u30d8\u30eb\u30d7
 general.hide=\u96a0\u3059
 general.hours=\u6642\u9593
 general.inet=i-net
-general.localcopyat=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
+general.local_copy_at=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240
 general.localcopyplace=\u30ed\u30fc\u30ab\u30eb\u30b3\u30d4\u30fc\u306e\u5834\u6240\u306e\u9078\u629e
 general.localized_date_format=yyyy MMMM dd.
 general.localnet=\u30ed\u30fc\u30ab\u30eb
