--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -468,7 +468,7 @@ general.help=help
 general.hide=verberg
 ##general.hours=Hour(s)
 general.inet=i-net
-general.localcopyat=Lokale kopie 
+general.local_copy_at=Lokale kopie
 general.localcopyplace=Kies een plek voor lokale kopie
 general.localized_date_format=dd MMMM yyyy
 general.localnet=lokaal
