--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -469,7 +469,7 @@ general.help=pomoc
 general.hide=schowaj
 general.hours=Godzina
 general.inet=Internet
-general.localcopyat=Lokalna kopia w
+general.local_copy_at=Lokalna kopia w
 general.localcopyplace=Wybierz miejsce dla lokalnej kopii
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
