--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -468,7 +468,7 @@ general.help=hj\u00e4lp
 general.hide=g\u00f6m
 ##general.hours=Hour(s)
 general.inet=Internet
-general.localcopyat=Lokal kopia
+general.local_copy_at=Lokal kopia
 general.localcopyplace=V\u00e4lj en plats f\u00f6r lokal kopia
 general.localized_date_format=yyyy MMMM dd
 general.localnet=LAN
