--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -314,7 +314,7 @@ foldercreate.key=s
 foldercreate.name=\u5171\u4eab\u6587\u4ef6\u5939
 foldercreate.nameempty.text=PowerFolder\u7684\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a
 foldercreate.nameempty.title=\u8981\u6c42\u8f93\u5165\u540d\u79f0
-foldercreate.progress.text=\u521b\u5efaPowerFolder '{0}'
+folder_create.progress.text=\u521b\u5efaPowerFolder '{0}'
 foldercreate.success=\u6210\u529f\u8bbe\u7f6ePowerFolder {0} \uff0c\u672c\u5730\u7684\u590d\u4ef6\u5728 '{1}'
 
 folderexception.dialog.text=\u4e0d\u80fd\u52a0\u5165 PowerFolder '{0}'\u3002\n\u539f\u56e0\: {1}
@@ -469,7 +469,7 @@ general.help=\u5e2e\u52a9
 general.hide=\u9690\u85cf
 general.hours=\u5c0f\u65f6
 general.inet=i-net
-general.localcopyat=\u672c\u5730\u526f\u672c
+general.local_copy_at=\u672c\u5730\u526f\u672c
 general.localcopyplace=\u9009\u62e9\u5b58\u653e\u672c\u5730\u526f\u672c\u7684\u4f4d\u7f6e
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=\u672c\u5730
