--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -468,7 +468,7 @@ general.help=\u0627\u0644\u0645\u0633\u0627\u0639\u062f\u0629
 general.hide=\u0625\u062e\u0641\u0627\u0621
 ##general.hours=Hour(s)
 general.inet=\u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
-general.localcopyat=\u0646\u0633\u062e \u0645\u062d\u0644\u064a \u0639\u0644\u0649
+general.local_copy_at=\u0646\u0633\u062e \u0645\u062d\u0644\u064a \u0639\u0644\u0649
 general.localcopyplace=\u0623\u062e\u062a\u0631 \u0645\u0643\u0627\u0646\u0627 \u0644\u0644\u0646\u0633\u062e \u0627\u0644\u0645\u062d\u0644\u064a
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=\u0634\u0628\u0643\u0629
