--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -468,7 +468,7 @@ general.help=\u041f\u043e\u043c\u043e\u0449\u044c
 general.hide=\u0421\u043f\u0440\u044f\u0442\u0430\u0442\u044c
 general.hours=\u0427\u0430\u0441\u043e\u0432
 general.inet=\u0418\u043d\u0442\u0435\u0440\u043d\u0435\u0442
-general.localcopyat=\u041c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f
+general.local_copy_at=\u041c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f
 general.localcopyplace=\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043c\u0435\u0441\u0442\u043e \u0434\u043b\u044f \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u044f
 general.localized_date_format=dd. MMMM yyyy
 general.localnet=\u041b\u043e\u043a\u0430\u043b\u043a\u0430
